# Oral_History_Repository

./: .gitignore  README.md
jupyter_notebooks/: Untitled.ipynb  pipeline_prototype.ipynb
oral_history_repository_project/: pyproject.toml
oral_history_repository_project/models/: __init__.py  corpus.py
oral_history_repository_project/oral_history_repository.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
oral_history_repository_project/oral_history_repository_root/corpus_text/: corpus1.txt
oral_history_repository_project/oral_history_repository_root/models/: corpus.py
oral_history_repository_project/oral_history_repository_root/util/: stream.py
oral_history_repository_project/util/: stream.py
oral_history_repository_virtual_environment/cmd/: main.py
oral_history_repository_virtual_environment/testing/: testing.py
research_work/: product_requirement_document.docx
